@@ -1,5 +1,7 @@
 2009-03-04  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
 
+	* src/batteries_toolchain/batteries_help.ml: New directive #browse.
+
 	* src/core/extlib/extPervasives.mli: Excluded printf directives from documentation generation.
 
 	* src/core/extlib/extPrint.mli: More documentation.
